0.4.15/_sources/api/napari.utils.Colormap.rst
napari.utils.Colormap
=====================

.. currentmodule:: napari.utils

.. autoclass:: Colormap
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~Colormap.construct
   
   
      ~Colormap.copy
   
   
      ~Colormap.dict
   
   
      ~Colormap.enums_as_values
   
   
      ~Colormap.from_orm
   
   
      ~Colormap.json
   
   
      ~Colormap.map
   
   
      ~Colormap.parse_file
   
   
      ~Colormap.parse_obj
   
   
      ~Colormap.parse_raw
   
   
      ~Colormap.reset
   
   
      ~Colormap.schema
   
   
      ~Colormap.schema_json
   
   
      ~Colormap.update
   
   
      ~Colormap.update_forward_refs
   
   
      ~Colormap.validate
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Colormap.colorbar
      ~Colormap.events
      ~Colormap.colors
      ~Colormap.name
      ~Colormap.interpolation
      ~Colormap.controls
   
   

   .. rubric:: Details