0.7.1/_sources/api/napari.utils.Colormap.rst
napari.utils.Colormap
=====================

.. currentmodule:: napari.utils

.. autoclass:: Colormap
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~Colormap.construct
   
   
      ~Colormap.copy
   
   
      ~Colormap.dict
   
   
      ~Colormap.enums_as_values
   
   
      ~Colormap.from_orm
   
   
      ~Colormap.json
   
   
      ~Colormap.map
   
   
      ~Colormap.model_construct
   
   
      ~Colormap.model_copy
   
   
      ~Colormap.model_dump
   
   
      ~Colormap.model_dump_json
   
   
      ~Colormap.model_json_schema
   
   
      ~Colormap.model_parametrized_name
   
   
      ~Colormap.model_post_init
   
   
      ~Colormap.model_rebuild
   
   
      ~Colormap.model_validate
   
   
      ~Colormap.model_validate_json
   
   
      ~Colormap.model_validate_strings
   
   
      ~Colormap.parse_file
   
   
      ~Colormap.parse_obj
   
   
      ~Colormap.parse_raw
   
   
      ~Colormap.reset
   
   
      ~Colormap.schema
   
   
      ~Colormap.schema_json
   
   
      ~Colormap.update
   
   
      ~Colormap.update_forward_refs
   
   
      ~Colormap.validate
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Colormap.colorbar
      ~Colormap.events
      ~Colormap.model_computed_fields
      ~Colormap.model_config
      ~Colormap.model_extra
      ~Colormap.model_fields
      ~Colormap.model_fields_set
      
      
      
      
      
      
      
   
   

   .. rubric:: Details